# StudyMLOps

./: .coverage  .dockerignore  .flake8  .pylintrc  Dockerfile  Makefile  logistic_clf.joblib  pyproject.toml  readme.md  requirements.txt  setup.py
.github/workflows/: lint.yml  practice.yml  train_and_test.yml
project/: __init__.py
project.egg-info/: PKG-INFO  requires.txt
project/data/: get_data.py
project/src/: logistic_clf.joblib  main.py  model_logging.md  pipeline.py  training.py
project/tests/: GUIDE.md  conftest.py  test_api.py  test_pipeline.py  test_training_entrypoint.py  unittest_data.csv
